Sent.jj
/**
 *	Simple English Sentence
 */

PARSER_BEGIN(Sent)
public class Sent {
	public static void main(String args[]) throws ParseException {
		Sent parser = new Sent(System.in);
		parser.Start();
	}
}
PARSER_END(Sent)
SKIP :
{
	" "|"\r"|"\n"
}
TOKEN :
{
		< I:	"I" >
	|	< YOU:	"YOU" >
	|	< ME:	"ME" >
	|	< LOVE:	"LOVE" >
}
void Start() :
{}
{
	sentence()	{ System.out.println("."); }
}
void sentence() :
{}
{
	subject() verb() object()
}
void subject() :
{}
{
		<I>		{ System.out.println("I"); }
	|	<YOU>	{ System.out.println("YOU"); }
}
void verb() :
{}
{
		<LOVE>	{System.out.println("LOVE"); }
}
void object() :
{}
{
		<ME>	{ System.out.println("ME"); }
	|	<YOU>	{ System.out.println("YOU"); }
}
